erDiagram
    Quiz {
        int quiz_id PK
        string name
        string description
        string category "type of assessment"
        int total_points
        bool is_active
        datetime created_at
    }
    Question {
        int question_id PK
        int quiz_id FK
        string content
        int points "max points for this question"
        bool is_multiple_choice "true if can select many answers"
        int display_order
        bool is_active
        datetime created_at
    }
    Answer {
        int answer_id PK
        int question_id FK
        string content
        int points "points for this answer"
        bool is_active
        datetime created_at
    }
    CustomerQuiz {
        int customer_quiz_id PK
        int customer_id FK
        int quiz_id FK
        int total_score
        string status "in_progress, completed"
        datetime started_at
        datetime completed_at
    }
    CustomerAnswer {
        int customer_answer_id PK
        int customer_quiz_id FK
        int question_id FK
        int answer_id FK
        int points_earned
        datetime answered_at
    }
    QuizRecommendation {
        int recommendation_id PK
        int quiz_id FK
        int service_id FK
        int min_score "minimum score to recommend"
        int max_score "maximum score to recommend"
        bool is_active
        datetime created_at
    }
    Service {
        int service_id PK
        string name
        string description
        decimal price
        bool is_active
        datetime created_at
    }
    Customer {
        int customer_id PK
        string name
        string email
        datetime created_at
    }

    Quiz ||--|{ Question : contains
    Question ||--|{ Answer : has
    Quiz ||--|{ QuizRecommendation : has
    Service ||--o{ QuizRecommendation : is_recommended_in
    Customer ||--o{ CustomerQuiz : takes
    CustomerQuiz ||--|{ CustomerAnswer : contains
    Question ||--o{ CustomerAnswer : answers
    Answer ||--o{ CustomerAnswer : selected

